--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
-<!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Message for you</title> 
-  <link rel="stylesheet" href="style.css"> 
- </head> 
- <body> 
-  <div class="wrapper"> 
-   <h2 class="question">You like me?</h2> 
-   <img class="gif" alt="gif" src="https://raw.githubusercontent.com/DzarelDeveloper/Img/main/gifyou.webp"> 
-   <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-btn">No</button> 
-   </div> 
-  </div> 
-  <script src="script.js"></script> 
- </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <title>Flowers</title>
+</head>
+<body>
+    <div class="greetings">
+        <span>H</span>
+        <span>A</span>
+        <span>L</span>
+        <span>L</span>
+        <span>O</span>
+        <span>L</span>
+        <span>O</span>
+        <span>V</span>
+        <span>E</span>
+        <span>!</span>
+    </div>
+    <div class="description">
+        <span>Flowers for you my Lovers!!</span>
+    </div>
+    <div class="button">
+        <button>
+            <a href="flower.html">Click here</a>
+        </button>
+        
+    </div>
+</body>
 </html>
